--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,20 +1,25 @@
 body
 {
+   
     background-color:lightslategrey;
-    display :flex;
+    display:flex;
     justify-content: center;
     align-items: center;
     height:100vh;
+    
 }
 #container
 {
     color:black;
+    font-style: italic;
+    font-weight: 100px;
 }
 .digit 
 {
-    font-size: 150px;
+    font-size: 100px;
     color: azure;
     font-weight: bold;
+
 }
 .txt
 {
